fix font styling on lyric page and slightly change branc colours to improve contrast ratio

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -86,8 +86,11 @@ main.search-results {
 }
 
 .lyric__body {
-  color: $white;
+  color: rgba($white, 0.65);
   white-space: pre-wrap;
+  font-family: $lora;
+  @include fontSize(1);
+  font-weight: 700;
 }
 
 .card {
